[gd_scene load_steps=9 format=3 uid="uid://cagqdvpd0s50t"]

[ext_resource type="Script" path="res://Scripts/Weapons/weapon_template.gd" id="1_3cu5t"]
[ext_resource type="PackedScene" uid="uid://dufu7q8o1sfgf" path="res://Scenes/Weapons/Projectiles/pellet.tscn" id="2_rcef8"]
[ext_resource type="Texture2D" uid="uid://cgxfn481x4ulx" path="res://Assets/Weapons/shotgun.png" id="3_lywql"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kpadi"]
atlas = ExtResource("3_lywql")
region = Rect2(0, 0, 34, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_451pg"]
atlas = ExtResource("3_lywql")
region = Rect2(34, 0, 34, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytvgr"]
atlas = ExtResource("3_lywql")
region = Rect2(68, 0, 34, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_norxv"]
atlas = ExtResource("3_lywql")
region = Rect2(0, 0, 34, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_0m3qx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpadi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_451pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytvgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpadi")
}],
"loop": false,
"name": &"firing",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_norxv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="weapon_template" type="Node2D"]
script = ExtResource("1_3cu5t")
number_of_projectiles = 5
spread = 0.2
projectile_scene = ExtResource("2_rcef8")
fire_rate = 1.0
metadata/weapon_name = "Shotgun"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(7, -1)
rotation = 0.785398
sprite_frames = SubResource("SpriteFrames_0m3qx")
animation = &"idle"

[node name="FirePoint" type="Marker2D" parent="."]
position = Vector2(3, 22)

[node name="FireRateTimer" type="Timer" parent="."]

[node name="BurstTimer" type="Timer" parent="."]

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_timer_timeout"]
